force-app/main/default/objects/OpponentTacticalPattern__c/OpponentTacticalPattern__c.object-meta.xml
<CustomObject>
    <description>Pattern tactique adverse observé et consolidé.</description>
    <label>Opponent Tactical Pattern</label>
    <nameField>
        <displayFormat>OP-{00000}</displayFormat>
        <label>Opponent Tactical Pattern Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opponent Tactical Patterns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>