force-app/main/default/objects/OpponentTacticalPattern__c/fields/EvidenceMatchIds__c.field-meta.xml
<CustomField>
    <fullName>EvidenceMatchIds__c</fullName>
    <label>Evidence Match IDs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>