force-app/main/default/objects/OpponentTacticalPattern__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>