force-app/main/default/objects/OpponentTacticalPattern__c/fields/PatternType__c.field-meta.xml
<CustomField>
    <fullName>PatternType__c</fullName>
    <label>Pattern Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Build-up</fullName>
            </value>
            <value>
                <fullName>Press</fullName>
            </value>
            <value>
                <fullName>Transition</fullName>
            </value>
            <value>
                <fullName>SetPiece</fullName>
                <default>true</default>
                <label>SetPiece</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>