force-app/main/default/objects/OpponentTacticalPattern__c/validationRules/ConfidenceMax100.validationRule-meta.xml
<ValidationRule>
    <fullName>ConfidenceMax100</fullName>
    <active>true</active>
    <errorConditionFormula>Confidence__c &gt; 100</errorConditionFormula>
    <errorMessage>Confidence cannot exceed 100.</errorMessage>
</ValidationRule>