force-app/main/default/objects/OpponentTacticalPattern__c/validationRules/FrequencyMax100.validationRule-meta.xml
<ValidationRule>
    <fullName>FrequencyMax100</fullName>
    <active>true</active>
    <errorConditionFormula>Frequency__c &gt; 100</errorConditionFormula>
    <errorMessage>Frequency cannot exceed 100.</errorMessage>
</ValidationRule>